--- a/templates/register.html
+++ b/templates/register.html
@@ -13,6 +13,7 @@
             <input id="username" autocomplete="off" autofocus class="form-control mx-auto w-auto" name="email" placeholder="Email" type="email" value="{{ email }}">
         </div>
         <div class="mb-3">
+            <div class="text-white bg-dark mb-3">Password should be between 4 - 15 characters in length.</div>
             <input autocomplete="off" id="pass" class="form-control mx-auto w-auto" name="password" placeholder="Password" type="password">
         </div>
         <div class="mb-3">
